timestep-ai/templates/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --build local --build-command docker compose pull && docker compose build && helm package timestep-ai --chart --file docker-compose.yml --push-image --push-command docker compose push && helm push timestep-ai-0.0.1.tgz oci://registry.gitlab.com/timestep-ai/timestep --push-image-registry registry.gitlab.com --out timestep-ai --secrets-as-files --verbose
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --build local --build-command docker compose pull && docker compose build && helm package timestep-ai --chart --file docker-compose.yml --push-image --push-command docker compose push && helm push timestep-ai-0.0.1.tgz oci://registry.gitlab.com/timestep-ai/timestep --push-image-registry registry.gitlab.com --out timestep-ai --secrets-as-files --verbose
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/timestep-default: "true"
        io.kompose.service: auth
    spec:
      containers:
        - env:
            - name: AUTH_CLIENT_URL
              value: http://localhost:3000
            - name: AUTH_HOST
              value: 0.0.0.0
            - name: AUTH_PORT
              value: "4000"
            - name: AUTH_SMTP_HOST
              value: mailhog
            - name: AUTH_SMTP_PASS
              value: password
            - name: AUTH_SMTP_PORT
              value: "1025"
            - name: AUTH_SMTP_SENDER
              value: mail@example.com
            - name: AUTH_SMTP_USER
              value: user
            - name: HASURA_GRAPHQL_ADMIN_SECRET
              value: nhost-admin-secret
            - name: HASURA_GRAPHQL_DATABASE_URL
              value: postgres://postgres:secret-pg-password-never-use-this-value@postgres:5432/postgres
            - name: HASURA_GRAPHQL_GRAPHQL_URL
              value: http://graphql-engine:8080/v1/graphql
            - name: HASURA_GRAPHQL_JWT_SECRET
              value: '{"type":"HS256", "key":"5152fa850c02dc222631cca898ed1485821a70912a6e3649c49076912daa3b62182ba013315915d64f40cddfbb8b58eb5bd11ba225336a6af45bbae07ca873f3","issuer":"hasura-auth"}'
          image: nhost/hasura-auth:0.16.2
          name: auth
          ports:
            - containerPort: 4000
              hostPort: 4000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
