timestep-ai/templates/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --build local --build-command docker compose build && helm package timestep-ai --chart --file docker-compose.yml --push-image --push-command helm push timestep-ai-0.0.1.tgz oci://registry.gitlab.com/timestep-ai/timestep --push-image-registry registry.gitlab.com --out timestep-ai --secrets-as-files --verbose
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --build local --build-command docker compose build && helm package timestep-ai --chart --file docker-compose.yml --push-image --push-command helm push timestep-ai-0.0.1.tgz oci://registry.gitlab.com/timestep-ai/timestep --push-image-registry registry.gitlab.com --out timestep-ai --secrets-as-files --verbose
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/timestep-default: "true"
        io.kompose.service: minio
    spec:
      containers:
        - args:
            - -c
            - mkdir -p /data/nhost && /opt/bin/minio server --address :8484 /data
          command:
            - sh
          image: minio/minio:RELEASE.2021-09-24T00-24-24Z
          name: minio
          ports:
            - containerPort: 8484
              hostPort: 8484
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio
      restartPolicy: Always
      volumes:
        - name: minio
          persistentVolumeClaim:
            claimName: minio
status: {}
