timestep-ai/templates/storage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --file docker-compose.yml --generate-network-policies --out timestep-ai --secrets-as-files --verbose
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: storage
  name: storage
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: storage
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --file docker-compose.yml --generate-network-policies --out timestep-ai --secrets-as-files --verbose
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/timestep-default: "true"
        io.kompose.service: storage
    spec:
      containers:
        - args:
            - serve
          image: nhost/hasura-storage:0.3.1
          name: storage
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
