timestep-ai/templates/www-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --file docker-compose.yml --out timestep-ai --secrets-as-files --verbose
    kompose.image-pull-policy: Always
    kompose.image-pull-secret: regcred
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: www
  name: www
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: www
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --file docker-compose.yml --out timestep-ai --secrets-as-files --verbose
        kompose.image-pull-policy: Always
        kompose.image-pull-secret: regcred
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/timestep-default: "true"
        io.kompose.service: www
    spec:
      containers:
        - args:
            - quasar
            - serve
            - dist/spa
            - --hostname
            - 0.0.0.0
            - -p
            - "9000"
          image: registry.gitlab.com/timestep-ai/timestep/www:1.0.44
          imagePullPolicy: Always
          name: www
          ports:
            - containerPort: 9000
              hostPort: 9000
              protocol: TCP
          resources: {}
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
status: {}
