timestep-ai/templates/caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --file docker-compose.yml --out timestep-ai --secrets-as-files --verbose
    kompose.image-pull-secret: regcred
    kompose.service.expose: timestep.local,www.timestep.local
    kompose.service.expose.ingress-class-name: caddy
    kompose.version: 1.30.0 (HEAD)
    kubernetes.io/ingress.class: caddy
  creationTimestamp: null
  labels:
    io.kompose.service: caddy
  name: caddy
  namespace: default
spec:
  ports:
    - name: "2019"
      port: 2019
      targetPort: 80
  selector:
    io.kompose.service: caddy
status:
  loadBalancer: {}
