timestep-ai/templates/prefect-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --build local --build-command docker compose pull && docker compose build && helm package timestep-ai --chart --file docker-compose.yml --push-image --push-command docker compose push && helm push timestep-ai-0.0.1.tgz oci://registry.gitlab.com/timestep-ai/timestep --push-image-registry registry.gitlab.com --out timestep-ai --secrets-as-files --verbose
    kompose.service.healthcheck.liveness.http_get_path: /api/health
    kompose.service.healthcheck.liveness.http_get_port: "4200"
    kompose.service.healthcheck.readiness.http_get_path: /api/ready
    kompose.service.healthcheck.readiness.http_get_port: "4200"
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: prefect-server
  name: prefect-server
  namespace: default
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 4200
  selector:
    io.kompose.service: prefect-server
status:
  loadBalancer: {}
