timestep-ai/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --build local --build-command docker compose build && helm package timestep-ai --chart --file docker-compose.yml --push-image --push-command helm push timestep-ai-0.0.1.tgz oci://registry.gitlab.com/timestep-ai/timestep --push-image-registry registry.gitlab.com --out timestep-ai --secrets-as-files --verbose
    kompose.image-pull-secret: regcred
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: default
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "5735"
      port: 5735
      targetPort: 5735
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
