timestep-ai/templates/caddy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --file docker-compose.yml --generate-network-policies --out timestep-ai --secrets-as-files --verbose
    kompose.image-pull-secret: regcred
    kompose.service.expose: timestep.local,www.timestep.local
    kompose.service.expose.ingress-class-name: caddy
    kompose.version: 1.30.0 (HEAD)
    kubernetes.io/ingress.class: caddy
  creationTimestamp: null
  labels:
    io.kompose.service: caddy
  name: caddy
  namespace: default
spec:
  ingressClassName: caddy
  rules:
    - host: timestep.local
      http:
        paths:
          - backend:
              service:
                name: caddy
                port:
                  number: 2019
            path: /
            pathType: Prefix
    - host: www.timestep.local
      http:
        paths:
          - backend:
              service:
                name: caddy
                port:
                  number: 2019
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
