timestep-ai/templates/www-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert --build local --build-command helm package timestep-ai --chart --file docker-compose.yml --push-image --push-command helm push timestep-ai-0.0.1.tgz oci://registry.gitlab.com/timestep-ai/timestep --push-image-registry registry.gitlab.com --out timestep-ai --secrets-as-files --verbose
    kompose.image-pull-secret: regcred
    kompose.service.expose: timestep.local,www.timestep.local
    kompose.service.expose.ingress-class-name: caddy
    kompose.version: 1.30.0 (HEAD)
    kubernetes.io/ingress.class: caddy
  creationTimestamp: null
  labels:
    io.kompose.service: www
  name: www
  namespace: default
spec:
  ingressClassName: caddy
  rules:
    - host: timestep.local
      http:
        paths:
          - backend:
              service:
                name: www
                port:
                  number: 8000
            path: /
            pathType: Prefix
    - host: www.timestep.local
      http:
        paths:
          - backend:
              service:
                name: www
                port:
                  number: 8000
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
